--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,6 @@
 {
-  "scopedRegistries": [
-    {
-      "name": "Keijiro",
-      "url": "https://registry.npmjs.com",
-      "scopes": [ "jp.keijiro" ]
-    }
-  ],
+  "scopedRegistries": [],
   "dependencies": {
-    "jp.keijiro.pcx": "1.0.1",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.7",
